# stock_tracker_and_action

./: .env.example  .gitignore  AGENTS.md  AGENTS.override.md  AGENTS.override.no_api.md  DATA_IMPORTS.md  INTEGRATIONS_AND_ADDONS.md  MAPPINGS.md  PROJECT_BRIEF.md  README.md  RECONCILIATION.md  REPORTS.md  ROADMAP.md  SECURITY.md  TASKS.md  TAX_REPORTING.md  broker_tax_export_mapping.example.json  broker_tax_export_mapping.schema.json  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.codex/environments/: portfolio_assistant.json
.github/workflows/: regression-gates.yml
docs/: non_blocker_m5_theme_dropdown_popper_warning.md
docs/runbooks/: 00_PROJECT_SUMMARY.md  01_WHAT_YOU_DO_NEXT.md  02_CODEX_APP_RUNBOOK.md  03_CODEX_APP_PROMPTS.md  04_AGENTS_SDK_RUNBOOK.md  05_AGENTS_SDK_TASKS.md  06_SETUP_NOTES.md
src/: app_streamlit.py
src/portfolio_assistant/: __init__.py
src/portfolio_assistant/analytics/: benchmarks.py  lots.py  (+6 more)
tests/: conftest.py  test_ask_gpt_tools.py  test_benchmarks.py  test_broker_exports_import.py  test_cash_import.py  test_contributions.py  test_daily_briefing.py  test_db_schema.py  test_ingest_pipeline.py  test_multi_account_regression.py  test_pdf_import.py  test_pnl_engine.py  test_providers_feeds.py  test_reconciliation.py  test_regression_gates_e2e.py  test_rss_ingest.py  test_runtime_compat.py  test_settings_local_policy.py  test_streamlit_page_wiring.py  test_streamlit_theme.py  test_tax_year_report.py  test_ui_pages.py  test_utils_modules.py  test_wash_sale.py
tools/: dev_cli.py  multi_agent_workflow.py
(+52 files in other folders)
